Add price and collected_items

--- a/_data/infos.yml
+++ b/_data/infos.yml
@@ -7,7 +7,7 @@
       - 'RH'
       - 'Commerce'
   domains:
-      - ''
+      - 'Eco-organismes'
 - name: David
   content: "Trésorier" 
   image: /assets/img/david.jpeg
